connect to midtrans

--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,13 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+JWT_SECRET=
+
+MIDTRANS_SERVER_KEY=
+MIDTRANS_IS_PRODUCTION=
+MIDTRANS_IS_SANITIZED=
+MIDTRANS_IS_3DS=
+
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
