--- a/.env.example
+++ b/.env.example
@@ -54,9 +54,9 @@ PUSHER_APP_CLUSTER=mt1
 JWT_SECRET=
 
 MIDTRANS_SERVER_KEY=
-MIDTRANS_IS_PRODUCTION=
-MIDTRANS_IS_SANITIZED=
-MIDTRANS_IS_3DS=
+MIDTRANS_IS_PRODUCTION=false
+MIDTRANS_IS_SANITIZED=true
+MIDTRANS_IS_3DS=true
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
